# dumbshell

./: CMakeLists.txt  README.md
lib/mpc/: mpc.h
src/: common.h  flycheck_parser.c  logic.c  logic.cc  logic.h  logic.hh  main.c  main.cc  mode.c  mode.cc  mode.hh  parse.c  parse.cc  parse.h  parse.hh  subprocess.c  subprocess.cc  subprocess.h  subprocess.hh
tests/: check_logic.c  check_logic.cc  check_logic.h  check_logic.hh  check_parse.c  check_parse.cc  check_parse.h  check_parse.hh  checks.c  checks.cc  checks.h  checks.hh  main.cc
